fix: made changes in span tag

--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
 
     <section class="pimage2">
         <div class="ptext">
-            <span class="textbg"> Explore Nature</span>
+            <span class="textbg"> Explore The Nature</span>
         </div>
     </section>
 
@@ -74,4 +74,5 @@
           <li class="l1"><a href="#link2">Link 2</a></li>
         </ul>
       </aside>
+
 </body></html>
